<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="351dp"
        android:layout_height="283dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="35dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/button_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/button_clear_current"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="116dp"
        android:text="@string/button_Get_message_history"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="112dp"
        android:text="@string/button_Get_device_all"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="156dp"
        android:text="@string/button_update_registration"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="192dp"
        android:text="@string/button_message_callback"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="44dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="96dp"
        android:text="@string/button_delivery_report"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button_check_queue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="148dp"
        android:autofillHints="375291234567"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_375291234567"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="196dp"
        android:text="@string/button_clear_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_Clear_textbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="220dp"
        android:text="@string/button_test"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>